<resources>
    <string name="app_name">Beroepsproduct Blok 4 - RecipesWorldwide</string>
    <string name="character_count">0 / 65.535</string>
    <string name="saveChanges">Wijzigingen opslaan</string>
    <string name="delete">Verwijderen</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    <string name="dialog_admin_approveIngredientTitle">Ingrediënt goedkeuren</string>
    <string name="dialog_admin_approveIngredient">Weet u zeker dat u dit ingrediënt wilt goedkeuren?</string>
    <string name="dialog_admin_deleteIngredientTitle">Ingrediënt verwijderen</string>
    <string name="dialog_admin_deleteIngredient">Weet u zeker dat u dit ingrediënt wilt verwijderen?\n\nLet op: Als dit ingrediënt gekoppeld zit aan recepten zal dit ingrediënt daarvan worden verwijderd</string>
    <string name="dialog_admin_changeIngredientTitle">Ingrediënt wijzigen</string>
    <string name="dialog_admin_changeIngredient">Weet u zeker dat u dit ingrediënt wilt wijzigen?</string>
    <string name="dialog_admin_approveRecipeTitle">Recept goedkeuren</string>
    <string name="dialog_admin_approveRecipe">Weet u zeker dat u dit recept wilt goedkeuren?</string>
    <string name="dialog_admin_deleteRecipeTitle">Recept verwijderen</string>
    <string name="dialog_admin_deleteRecipe">Weet u zeker dat u dit recept wilt verwijderen?</string>
    <string name="tabs_home_register">Registreren</string>
    <string name="tabs_home_login">Inloggen</string>
    <string name="tabs_home_home">Home</string>
    <string name="tabs_home_addRecipe">Recept</string>
    <string name="tabs_home_addIngredient">Ingrediënt</string>
    <string name="tabs_administrator_addValues">Waardes Toevoegen</string>
    <string name="tabs_administrator_manageUsers">Gebruikers</string>
    <string name="tabs_administrator_manageRecipes">Recepten</string>
    <string name="tabs_administrator_manageIngredients">Ingrediënten</string>
    <string name="tabs_administrator_other">Overig</string>
    <string name="tabs_user_recipe">Mijn Recepten</string>
    <string name="tabs_user_review">Mijn Reviews</string>
    <string name="manageUserRecipes_title">Mijn Recepten Beheren</string>
    <string name="manageUserRecipes_subtext">Op deze pagina kunt u uw eigen recepten wijzigen en/of verwijderen</string>
    <string name="manageUserRecipes_subtitle">Mijn Recepten</string>
    <string name="manageUserReviews_title">Mijn Reviews Beheren</string>
    <string name="manageUserReviews_subtext">Op deze pagina kunt u uw eigen reviews wijzigen en/of verwijderen</string>
    <string name="manageUserReviews_subtitle">Mijn Reviews</string>
    <string name="manageRecipes_title">Recepten Beheren</string>
    <string name="manageRecipes_subtext">Op deze pagina kunt u recepten goed- of afkeuren. Ook kunt u voor het goedkeuren wijzigingen doorvoeren (zoals spelfouten uit de naam halen), zodat het recept later niet nogmaals bewerkt hoeft te worden.</string>
    <string name="manageRecipes_buttonApproveRecipe">Recept goedkeuren</string>
    <string name="manageRecipes_buttonDenyRecipe">Recept afkeuren</string>
    <string name="manageRecipes_unapprovedRecipes">Recepten te beheren</string>
    <string name="manageRecipes_addedBy">Toegevoegd door</string>
    <string name="manageRecipes_addedByHint">vul gebruikersnaam in</string>
    <string name="manageRecipes_isApproved">Goedgekeurd?</string>
    <string name="manageRecipes_titleApproveOrDenyRecipes">Recepten goed- of afkeuren</string>
    <string name="manageRecipes_titleManageRecipes">Recepten beheren</string>
    <string name="manageIngredients_title">Ingrediënten Beheren</string>
    <string name="manageIngredients_subtext">Op deze pagina kunt u ingrediënten goed- of afkeuren. Ook kunt u voor het goedkeuren wijzigingen doorvoeren (zoals spelfouten uit de naam halen), zodat het ingrediënt later niet nogmaals bewerkt hoeft te worden.</string>
    <string name="manageIngredients_buttonApproveIngredient">Ingrediënt goedkeuren</string>
    <string name="manageIngredients_buttonDeleteIngredient">Ingrediënt verwijderen</string>
    <string name="manageIngredients_unapprovedIngredients">Ingrediënten te beheren</string>
    <string name="manageIngredients_titleApproveOrDenyIngredients">Ingrediënten goed- of afkeuren</string>
    <string name="manageIngredients_titleManageIngredients">Ingrediënten beheren</string>
    <string name="manageUsers_title">Gebruikers Beheren</string>
    <string name="manageUsers_subtext">Op deze pagina kunt u gebruikers beheren en/of wijzigen.</string>
    <string name="manageUsers_subtitle">Gebruikers</string>
    <string name="addRecipe_title">Recept Toevoegen</string>
    <string name="addRecipe_subtext">Op deze pagina kunt u een recept toevoegen. Deze moet bestaan uit:\n\n- Maaltijdsoort (vegetarisch, meat only etc.)\n- Naam\n- Land van herkomst\n- Religie (optioneel)\n- Geschikt voor dagdeel (ontbijt, lunch etc.)\n- Beschrijving (optioneel, maar wel sterk   aangeraden)\n- Ingrediënten\n\nDe ingrediënten kunt u zelf toevoegen door op de "Nieuw ingrediënt toevoegen" knop te drukken onderaan de pagina. Zodra het recept is aangemeld, zal het worden bekeken door een administrator.</string>
    <string name="addRecipe_recipeType">Maaltijdsoort</string>
    <string name="addRecipe_recipeName">Receptnaam</string>
    <string name="addRecipe_recipeNameHint">vul recept naam in</string>
    <string name="addRecipe_recipeCountry">Land</string>
    <string name="addRecipe_recipeReligion">Religie</string>
    <string name="addRecipe_recipeMealDaypart">Meest geschikt als</string>
    <string name="addRecipe_recipeBindIngredient">Koppel Ingrediënt</string>
    <string name="addRecipe_recipeBindIngredientAddition">Ingrediënt toevoeging</string>
    <string name="addRecipe_recipeBindIngredientAdditionHint">bijv. 500 gram</string>
    <string name="addRecipe_recipeDescriptionHint">vul hier de omschrijving voor het recept in</string>
    <string name="addRecipe_buttonAddIngredient">+</string>
    <string name="addRecipe_buttonAddNewIngredient">Nieuw ingrediënt toevoegen</string>
    <string name="addRecipe_buttonApplyRecipe">Recept aanmelden</string>
    <string name="home_notLoggedIn">U bent niet ingelogd</string>
    <string name="home_button_searchRecipe">Recepten zoeken</string>
    <string name="home_button_adminArea">Administrator Omgeving</string>
    <string name="home_button_userArea">Gebruiker Omgeving</string>
    <string name="addIngredient_title">Ingrediënt Toevoegen</string>
    <string name="addIngredient_subtext">Op deze pagina kunt u een ingrediënt toevoegen</string>
    <string name="addIngredient_ingredientName">Ingredientnaam</string>
    <string name="addIngredient_ingredientNameHint">vul ingrediënt naam in</string>
    <string name="addIngredient_ingredientDescriptionHint">vul hier de omschrijving voor het ingrediënt in</string>
    <string name="addIngredient_buttonApplyIngredient">Ingrediënt aanmelden</string>
    <string name="addTijdvak_title">Tijdvak Toevoegen</string>
    <string name="addTijdvak_subtext">Op deze pagina kunt u een tijdvak toevoegen</string>
    <string name="addTijdvak_tijdvakName">Tijdvak naam</string>
    <string name="addTijdvak_tijdvakNameHint">vul tijdvak naam in</string>
    <string name="addTijdvak_buttonApplyTijdvak">Tijdvak aanmelden</string>
    <string name="editTijdvak_title">Tijdvak Wijzigen</string>
    <string name="editTijdvak_subtext">Op deze pagina kunt u een tijdvak wijzigen door een bestaand tijdvak te selecteren uit de dropdown</string>
    <string name="editTijdvak_editableTimeOfDays">Tijdvakken te beheren</string>
    <string name="addWordfilter_title">Woord Toevoegen</string>
    <string name="addWordfilter_subtext">Op deze pagina kunt u een word toevoegen aan de zwartelijst. Zo kunt u voorkomen dat er woorden worden gebruikt die niet samen gaan met de gebruikersvoorwaarde.</string>
    <string name="addWordfilter_wordName">Woord naam</string>
    <string name="addWordfilter_wordfilterNameHint">vul schelwoord in</string>
    <string name="addWordfilter_buttonApplyWord">Scheldwoord aanmelden</string>
    <string name="editWordfilter_title">Woord aanpassen</string>
    <string name="editWordfilter_subtext">Op deze pagina kunt u een woord wijzigen door een bestaand woord te selecteren uit de dropdown</string>
    <string name="editWordfilter_editableWordfilter">Woorden te beheren</string>
    <string name="addMealtype_title">Maaltijdsoort Toevoegen</string>
    <string name="addMealtype_subtext">Op deze pagina kunt u een maaltijdsoort toevoegen</string>
    <string name="addMealtype_mealtypeName">Maaltijdsoort naam</string>
    <string name="addMealtype_mealtypeNameHint">vul maaltijdsoort naam in</string>
    <string name="addMealtype_buttonApplyMealtype">Maaltijdsoort aanmelden</string>
    <string name="editMealtype_title">Maaltijdsoort Wijzigen</string>
    <string name="editMealtype_subtext">Op deze pagina kunt u een maaltijdsoort wijzigen door een bestaande maaltijdsoort te selecteren uit de dropdown</string>
    <string name="editMealtype_editableMealtypes">Maaltijdsoorten te beheren</string>
    <string name="editReligion_title">Religie naam Wijzigen</string>
    <string name="editReligion_subtext">Op deze pagina kunt u een religie wijzigen door een bestaande religie te selecteren uit de dropdown</string>
    <string name="editReligion_editableReligion">Religie te beheren</string>
    <string name="addCountry_title">Land Toevoegen</string>
    <string name="addCountry_subtext">Op deze pagina kunt u een land toevoegen</string>
    <string name="addCountry_countryCode">Landcode</string>
    <string name="addCountry_countryCodeHint">vul landcode in</string>
    <string name="addCountry_countryName">Land naam</string>
    <string name="addCountry_countryNameHint">vul land naam in</string>
    <string name="addCountry_buttonApplyCountry">Land aanmelden</string>
    <string name="addCountry_countryDescriptionHint">vul hier de omschrijving voor het land in</string>
    <string name="editCountry_title">Land Wijzigen</string>
    <string name="editCountry_subtext">Op deze pagina kunt u een land wijzigen door het te selecteren uit de dropdown</string>
    <string name="editCountry_editableCountries">Landen te beheren</string>
    <string name="addReligie_title">Religie Toevoegen</string>
    <string name="addReligie_subtext">Op deze pagina kunt u een religie toevoegen</string>
    <string name="addReligie_religieName">religie naam</string>
    <string name="addReligie_religieNameHint">vul religie naam in</string>
    <string name="addReligie_buttonApplyReligie">Religie aanmelden</string>
    <string name="search_Search_Recipe_Title">Zoek een recept!</string>
    <string name="search_Recipe_subtext">Op deze pagina kunt u recepten opzoeken. \nu kunt filteren op de volgende items: \n\n- Maaltijdsoort (vegetarisch, meat only etc.)\n- Land van herkomst\n- Religie (optioneel)\n- Geschikt voor dagdeel (ontbijt, lunch etc.).</string>
    <string name="searchRecipe_buttonSearch">Zoek recept!</string>
    <string name="recipeDetailedView_title">Receptnaam</string>
    <string name="recipeDetailedView_description">Omschrijving</string>
    <string name="recipeDetailedView_ingredients">Ingrediënten</string>
    <string name="recipeDetailedView_reviews">Reviews</string>
    <string name="recipeDetailedView_button_AddReview">Review schrijven</string>
    <string name="addReview_title">Review Toevoegen</string>
    <string name="addReview_reviewTitle">Titel</string>
    <string name="addReview_rating">Waardering</string>
    <string name="login_title">Login</string>
    <string name="login_hint_username">Gebruikersnaam</string>
    <string name="login_hint_password">********</string>
    <string name="login_button_signIn">Inloggen</string>
    <string name="login_button_signOut">Uitloggen</string>
    <string name="login_textView_registratie">registreren?</string>
</resources>