<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homescreen_background"

    tools:context=".home.Home">

    <Button
        android:id="@+id/home_button_search"
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorGreenBackground"
        android:text="@string/home_button_searchRecipe"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/home_button_administrator"
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorGreenBackground"
        android:text="@string/home_button_adminArea"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_button_search" />

    <Button
        android:id="@+id/home_button_userArea"
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorGreenBackground"
        android:text="@string/home_button_userArea"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_button_administrator" />

</androidx.constraintlayout.widget.ConstraintLayout>