<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="administrator.country.AddCountry">

    <ScrollView
        android:id="@+id/addCountry_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addCountry_constraintLayout_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/addCountry_linearLayout_textviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorGreenBackground"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/addCountry_constraintLayout_scrollview">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/addCountry_title"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/addCountry_subtext"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textSize="15sp" />
            </LinearLayout>

            <!-- Country Code -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addCountry_constraintLayout_countryCode"
                android:layout_width="180dp"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGreenBackground"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/addCountry_linearLayout_textviews"
                app:layout_constraintTop_toBottomOf="@id/addCountry_linearLayout_textviews">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"
                    android:text="@string/addCountry_countryCode"
                    android:textColor="@color/colorText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/addCountry_edittext_countryCode"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:background="@drawable/inputfields"
                android:ems="10"
                android:hint="@string/addCountry_countryCodeHint"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/addCountry_constraintLayout_countryCode"
                app:layout_constraintEnd_toEndOf="@id/addCountry_linearLayout_textviews"
                app:layout_constraintStart_toEndOf="@id/addCountry_constraintLayout_countryCode" />

            <!-- Country Name -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addCountry_constraintLayout_countryName"
                android:layout_width="180dp"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGreenBackground"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/addCountry_linearLayout_textviews"
                app:layout_constraintTop_toBottomOf="@id/addCountry_constraintLayout_countryCode">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"
                    android:text="@string/addCountry_countryName"
                    android:textColor="@color/colorText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/addCountry_edittext_countryName"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:background="@drawable/inputfields"
                android:ems="10"
                android:hint="@string/addCountry_countryNameHint"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/addCountry_constraintLayout_countryName"
                app:layout_constraintEnd_toEndOf="@id/addCountry_linearLayout_textviews"
                app:layout_constraintStart_toEndOf="@id/addCountry_constraintLayout_countryName" />

            <!-- Country description -->
            <EditText
                android:id="@+id/addCountry_edittext_description"
                android:layout_width="0dp"
                android:layout_height="76dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/inputfields"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/addCountry_countryDescriptionHint"
                android:inputType="textMultiLine"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/addCountry_linearLayout_textviews"
                app:layout_constraintStart_toStartOf="@id/addCountry_linearLayout_textviews"
                app:layout_constraintTop_toBottomOf="@id/addCountry_constraintLayout_countryName" />

            <TextView
                android:id="@+id/addCountry_textview_countryDescriptionCharacterCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_count"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/addCountry_edittext_description"
                app:layout_constraintTop_toBottomOf="@id/addCountry_edittext_description" />

            <!-- Ingredient aanmelden -->
            <Button
                android:id="@+id/addCountry_btn_applyCountry"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button"
                android:gravity="center|start"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/addCountry_buttonApplyCountry"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/addCountry_linearLayout_textviews"
                app:layout_constraintTop_toBottomOf="@id/addCountry_textview_countryDescriptionCharacterCount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>