<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".religion.Add">

    <ScrollView
        android:id="@+id/addReligion_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addReligion_constraintLayout_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/addReligion_linearLayout_textviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorGreenBackground"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/addReligion_constraintLayout_scrollview">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/addReligie_title"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/addReligie_subtext"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textSize="15sp" />
            </LinearLayout>

            <!-- Religion Name -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addReligion_constraintLayout_religionName"
                android:layout_width="180dp"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGreenBackground"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/addReligion_linearLayout_textviews"
                app:layout_constraintTop_toBottomOf="@id/addReligion_linearLayout_textviews">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"
                    android:text="@string/addReligie_religieName"
                    android:textColor="@color/colorText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/addReligion_edittext_religionName"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:background="@drawable/inputfields"
                android:ems="10"
                android:hint="@string/addReligie_religieNameHint"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/addReligion_constraintLayout_religionName"
                app:layout_constraintEnd_toEndOf="@id/addReligion_linearLayout_textviews"
                app:layout_constraintStart_toEndOf="@id/addReligion_constraintLayout_religionName" />

            <!-- Religion registration -->
            <Button
                android:id="@+id/addReligion_btn_applyReligion"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button"
                android:gravity="center|start"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/addReligie_buttonApplyReligie"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/addReligion_linearLayout_textviews"
                app:layout_constraintTop_toBottomOf="@id/addReligion_edittext_religionName" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>